org_unpackaged/unpackaged/objects/Security_Clearance_Visit_Request__c.object
<CustomObject>
    <fields>
        <fullName>Allow_After_DD_254_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow After DD-254 End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Secret</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Secret</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_on_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JPAS_SMO_Code__c</fullName>
        <label>JPAS SMO Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Request__c</fullName>
        <label>Purpose of Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Clearance__c</fullName>
        <label>Security Clearance</label>
        <referenceTo>Security_Clearance__c</referenceTo>
        <relationshipLabel>Security Clearance Visit Requests</relationshipLabel>
        <relationshipName>Security_Clearance_Visit_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Security_POC_Fax__c</fullName>
        <label>Security POC Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Security_POC_Phone__c</fullName>
        <label>Security POC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Security_POC__c</fullName>
        <label>Security POC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_POC_Phone__c</fullName>
        <label>Technical POC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Technical_POC__c</fullName>
        <label>Technical POC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finger Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Security Clearance Visit Request</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Security Clearance Visit Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Clearance Visit Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Visit_Request_After_DD254</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Allow_After_DD_254_End_Date__c = FALSE,
    Security_Clearance__r.Furthest_DD254_End_Date__c &lt;                      End_Date__c 
   )</errorConditionFormula>
        <errorMessage>A visit request cannot be submitted after the end date of the Clearance&apos;s last DD-254.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Request_only_if_DD254_is_Present</fullName>
        <active>true</active>
        <errorConditionFormula>Security_Clearance__r.Has_DD254__c = false</errorConditionFormula>
        <errorMessage>A visit request can only be submitted for a Security Clearance that has a DD-254.</errorMessage>
    </validationRules>
</CustomObject>